--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,7 +6,7 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
 
-    <main>
+    <main class="backgroundImage">
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
