--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,6 +1,10 @@
 <div class="backdrop"></div>
 <header class="main-header">
-  <button id="side-menu-toggle">Menu</button>
+  <button id="side-menu-toggle">
+    <hr />
+    <hr />
+    <hr />
+  </button>
   <nav class="main-header__nav">
     <ul class="main-header__item-list">
       <li class="main-header__item">
