--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -38,6 +38,11 @@
           >Admin Products
         </a>
       </li>
+      <li class="main-header__item">
+        <a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile"
+          >Profile
+        </a>
+      </li>
       <% } %>
     </ul>
 
@@ -46,6 +51,11 @@
       <li class="main-header__item">
         <a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
           >Login</a
+        >
+      </li>
+      <li class="main-header__item">
+        <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup"
+          >Signup</a
         >
       </li>
       <% } else{ %>
@@ -77,17 +87,24 @@
         >Orders</a
       >
     </li>
+    <% if(!isAuthenticated){ %>
     <li class="mobile-nav__item">
       <a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
         >Login</a
       >
     </li>
     <li class="mobile-nav__item">
+      <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup"
+        >Signup</a
+      >
+    </li>
+    <% } else {%>
+    <li class="mobile-nav__item">
       <form action="/logout" method="POST">
         <button type="submit">Logout</button>
       </form>
     </li>
-    <% if(isAuthenticated) { %>
+    <% } %> <% if(isAuthenticated) { %>
     <li class="mobile-nav__item">
       <a
         class="<%= path === '/admin/add-product' ? 'active' : '' %>"
