--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,9 +1,11 @@
 .login-form {
   width: 35rem;
-  height: 20rem;
+  height: 25rem;
   max-width: 90%;
   margin: 5.5rem auto;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
   border: 1px solid black;
   border-radius: 0.75rem;
   padding: 0.75rem;
@@ -11,8 +13,12 @@
   font-size: larger;
   background-color: rgba(255, 255, 255, 0.5);
 }
-.login-form label {
-  margin-top: 3rem;
+.login-form .inner {
+  margin-top: 2rem;
+}
+
+.login-form .innerSign {
+  margin-top: 1rem;
 }
 
 .backgroundImage {
