work on remove order btn, not working yet.

--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -13,7 +13,7 @@
             <div class="data"><%= userData.password %></div>
             <form class="passwordChange" action="/profile-change-password" method="POST">
                 <label for="newPassword" style="margin-bottom: 0.5rem;">Change Password:</label>
-              <div>
+              <div style="max-width: 100%;">
                 <input type="text" name="newPassword" id="newPassword">
                 <button type="submit" class="btn">Confirm Change</button>
               </div>
