--- a/public/css/main.css
+++ b/public/css/main.css
@@ -239,6 +239,17 @@ form {
   width: 104.5px;
 }
 
+.btn.red {
+  color: red;
+  border-color: red;
+}
+
+.btn.red:hover,
+.btn.red:active {
+  background: red;
+  color: white;
+}
+
 .btn.danger:hover,
 .btn.danger:active {
   background: red;
