--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -10,6 +10,7 @@
   border-radius: 0.75rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
   height: 25rem;
+  overflow-x: hidden;
 }
 
 .userInfo {
@@ -32,4 +33,11 @@
 .passwordChange button {
   height: 100%;
   font-size: larger;
+}
+
+@media (max-width: 768px) {
+  .passwordChange {
+    max-height: 90%;
+    font-size: medium;
+  }
 }
