--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -119,6 +119,11 @@
         >Admin Products
       </a>
     </li>
+    <li class="mobile-nav__item">
+      <a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile"
+        >Profile
+      </a>
+    </li>
     <% } %>
   </ul>
 </nav>
