--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -24,13 +24,18 @@
   display: flex;
 }
 
+.orders__products a {
+  text-decoration: none;
+  color: inherit;
+  flex-grow: 1;
+}
+
 .orders__products-item {
   margin: 0.5rem 0;
   padding: 0.5rem;
   border: 1px solid #00695c;
   background-color: #00695c;
   color: white;
-  flex-grow: 1;
   text-align: center;
   margin-right: 1%;
   border-radius: 0.5rem;
