--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -9,7 +9,7 @@
   border: 1.5px solid black;
   border-radius: 0.75rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
-  height: 25rem;
+  height: 30rem;
   overflow-x: hidden;
 }
 
@@ -19,6 +19,7 @@
 }
 
 .data {
+  width: 90%;
   border-bottom: 1px solid black;
 }
 
