--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,6 +7,9 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main class="backgroundImage">
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %> </div>
+       <% } %> 
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email" class="inner">E-Mail</label>
