--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -11,13 +11,20 @@
             <div class="data"><%= userData.email %></div>
             <div class="userInfo">Your Crypted Password:</div>
             <div class="data"><%= userData.password %></div>
+            <div class="userInfo">Probably Your Password:</div>
+            <% const probablePsw = userData.email.split('@')[0] %> 
+            <div class="data"><%= probablePsw %></div>
             <form class="passwordChange" action="/profile-change-password" method="POST">
                 <label for="newPassword" style="margin-bottom: 0.5rem;">Change Password:</label>
-              <div style="max-width: 100%;">
-                <input type="text" name="newPassword" id="newPassword">
-                <input type="hidden" name="_csrf" value="<%= csrfToken %> " />
-                <button type="submit" class="btn">Confirm Change</button>
-              </div>
+                <div style="max-width: 100%;">
+                  <input type="password" name="newPassword" id="newPassword">
+                  <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+                </div>
+                <label for="newPassword" style="margin-bottom: 0.5rem;">Confirm Password:</label>
+                <div style="max-width: 100%;">
+                  <input type="password" name="confirmPassword" id="confirmPassword">
+                  <button type="submit" class="btn">Confirm Change</button>
+                </div>
             </form>
         </div>
     </main>
