feat(advanced-auth):finish s17 and add a lot of features, cart link shows number of items, admin-products can be seen and updated only by it's creators, fix some bugs, add creator to mongo schema for product.

--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -6,6 +6,9 @@
 <body>
   <%- include('../includes/navigation.ejs') %>
     <main class="profileCont">
+      <% if(errorMessage){ %> 
+            <div class="user-message user-message--error"><%= errorMessage %> </div>
+        <% } %> 
         <div class="user">
             <div class="userInfo">Your Email:</div>
             <div class="data"><%= userData.email %></div>
