--- a/public/css/main.css
+++ b/public/css/main.css
@@ -291,9 +291,11 @@ form {
 .user-message--error {
   color: black;
   border-color: rgb(176, 5, 5);
-  background: rgb(255, 66, 66);
+  background: rgba(255, 0, 0, 0.5);
   padding: 0.5rem;
+  font-size: 20px;
   border-radius: 0.75rem;
+  margin-bottom: 0.5rem;
   text-align: center;
 }
 
