--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,9 @@
+<% if(isAuthenticated){ %>
 <form action="/cart" method="POST">
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
   <button class="btn" type="submit">Add to Cart</button>
   <input type="hidden" name="productId" value="<%= product._id %>" />
 </form>
+<% } else { %>
+<button class="btn"><a class="a-btn" href="/login">Login</a></button>
+<% } %>
