--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -21,3 +21,8 @@
 .form-control textarea:focus {
   outline-color: #00695c;
 }
+
+.form-control input.invalid {
+  border-color: red;
+  background-color: rgba(250, 0, 0, 0.4);
+}
