--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,10 +13,10 @@
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email" class="inner">E-Mail</label>
-                <input type="email" required name="email" id="email">
+                <input class="<%= validationErrors.find(e=>e.param === 'email') ? 'invalid': '' %>" type="email" required name="email" id="email" value="<%= prevInput.email %>">
 
                 <label for="password" class="inner">Password</label>
-                <input type="password" required name="password" id="password">
+                <input class="<%= validationErrors.find(e=>e.param === 'password') ? 'invalid': '' %>" type="password" required name="password" id="password" value="<%= prevInput.password %>">
             </div>
 
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
