--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -13,17 +13,17 @@
     <form class="login-form" action="/signup" method="POST">
       <div class="form-control">
         <label for="email">E-Mail</label>
-        <input type="email" required name="email" id="email" />
+        <input class="<%= validationErrors.find(e=>e.param === 'email') ? 'invalid': '' %>" type="email" required name="email" id="email" value="<%= prevInput.email%>"/>
       </div>
 
       <div class="form-control innerSign">
         <label for="password">Password</label>
-        <input type="password" required name="password" id="password" />
+        <input class="<%= validationErrors.find(e=>e.param === 'password') ? 'invalid': '' %>" type="password" required name="password" id="password" value="<%= prevInput.password %>" />
       </div>
  
       <div class="form-control innerSign">
         <label for="confirmPassword">Confirm Password</label>
-        <input type="password" required name="confirmPassword" id="confirmPassword" />
+        <input class="<%= validationErrors.find(e=>e.param === 'confirmPassword') ? 'invalid': '' %>" type="password" required name="confirmPassword" id="confirmPassword"  value="<%= prevInput.confirmPassword%>"/>
       </div>
 
       <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
